feature :: add validate api